# zig-cc-python

./: README.md  pyproject.toml
.agent/: journal.md
.github/workflows/: publish.yml
src/zig_backend/: cc.py
src/zig_cc/: cc.py
tests/: test_cython_build.py  test_filter.py
