[project]
name = "zig-backend"
version = "0.1.0"
description = "zig cc backend for Python/Cython extension builds — drop-in CC= replacement"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["cython", "zig", "compiler", "build", "extension"]
dependencies = ["ziglang"]

[project.scripts]
"zig-backend"     = "zig_backend.cc:main_cc"
"zig-backend-cc"  = "zig_backend.cc:main_cc"
"zig-backend-c++" = "zig_backend.cc:main_cxx"
"zig-backend-cxx" = "zig_backend.cc:main_cxx"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zig_backend"]
