[project]
name = "zig-cc-python"
version = "0.1.0"
description = "zig cc as a drop-in CC= replacement for Python extension builds"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["cython", "zig", "compiler", "build", "extension"]
dependencies = ["ziglang>=0.13"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Compilers",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = ["pytest", "cython", "setuptools"]

[project.scripts]
"zig-cc"     = "zig_cc.cc:main_cc"
"zig-cc-c++" = "zig_cc.cc:main_cxx"
"zig-cc-cxx" = "zig_cc.cc:main_cxx"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zig_cc"]
